
- Fix NullPointerException in Preview Javadoc macro (#2412 - Dale Anson)

- Fix dockable buttons not wrapping correctly (#2626 - Dale Anson)

- Fix electric scroll not working with page up/down (#2719 - Dale Anson)

- Correct location of context menu popup (#4073 - Dale Anson)

- Fix file browser splitter buttons not working (#4081 - Dale Anson)

}}}
{{{ Miscellaneous

- Store the glyph width in the GlyphCache to make token marking faster
  (Matthieu Casanova)

- New EditPaneManager, with convenient methods to get and iterate over
  EditPanes, get it by calling jEdit.getEditPaneManager() (Matthieu Casanova)

- New BufferManager, all you need to get loaded buffers from jEdit
  get it by calling jEdit.getBufferManager() (Matthieu Casanova)

- New ViewManager, all you need to get loaded existing views
  get it by calling jEdit.getViewManager() (Matthieu Casanova)

- Added new method JEditBuffer.hasProperty() (Matthieu Casanova)

- Apply UI language changes immediately without the need to restart.
  (Björn "Vampire" Kautler)

- The tray icon on Linux systems now by default tries to detect the proper
  background color and also lets the user either select a fixed color for
  the background or select some arbitrary rectangle as background for the
  tray icon, making the icon much less ugly on dark themes.
  (Björn "Vampire" Kautler)

- The Windows EXE launcher now considers JAVA_HOME environment variable if no
  matching Java is found in the registry (Björn "Vampire" Kautler)

- The Windows installer now uses modern and resizable style and allows
  installation without administrator privileges (Björn "Vampire" Kautler)

- Chinese Taiwan localization from David Day (Patch #620 - Dale Anson)

- Fix all deprecation warnings produced when compiling with Java 9 (Dale Anson)

- Adjust Appearance option pane to allow setting "primary" and "secondary" fonts
  for all look and feels (Dale Anson)

- Improve Regular Expressions documentation (Björn "Vampire" Kautler)

}}}